<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
<ScrollView
    android:layout_width="match_parent"
    android:background="@color/color2"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/d_60_70_90"
        android:layout_marginBottom="@dimen/d_1_2_4"
        android:layout_marginTop="@dimen/d_1_2_4"
        android:background="@color/wallet_bright_foreground_holo_dark"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:textSize="@dimen/s_18_20_24"
            android:layout_weight="1"
            android:padding="@dimen/d_8_10_12"
            android:text="@string/product_name"
            android:textColor="#381E1E"

            />
        <android.support.v7.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/ic_settings_ethernet_black_24dp"
            />
        <Spinner
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:id="@+id/Sp_product_name"
            android:layout_height="match_parent">
        </Spinner>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/d_60_70_90"
        android:layout_marginBottom="@dimen/d_1_2_4"
        android:layout_marginTop="@dimen/d_1_2_4"
        android:background="@color/wallet_bright_foreground_holo_dark"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:textSize="@dimen/s_18_20_24"
            android:layout_weight="1"
            android:padding="@dimen/d_8_10_12"
            android:textColor="#381E1E"
            android:text="@string/barcode"
            />
        <android.support.v7.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/ic_settings_ethernet_black_24dp"
            />
        <Spinner
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:id="@+id/Sp_product_barcode"
            android:layout_height="match_parent">
        </Spinner>
    </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginBottom="@dimen/d_1_2_4"
            android:layout_marginTop="@dimen/d_1_2_4"
            android:layout_height="@dimen/d_60_70_90"
            android:background="@color/wallet_bright_foreground_holo_dark"
            android:orientation="horizontal"

            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:textSize="@dimen/s_18_20_24"
                android:layout_weight="1"
                android:padding="@dimen/d_8_10_12"
                android:textColor="#381E1E"
                android:text="@string/price"
                />
            <android.support.v7.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/ic_settings_ethernet_black_24dp"
                />
            <Spinner
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:id="@+id/Sp_price"
                android:layout_height="match_parent">
            </Spinner>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/d_60_70_90"
            android:layout_marginBottom="@dimen/d_1_2_4"
            android:layout_marginTop="@dimen/d_1_2_4"
            android:background="@color/wallet_bright_foreground_holo_dark"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:textSize="@dimen/s_18_20_24"
                android:layout_weight="1"
                android:padding="@dimen/d_8_10_12"
                android:textColor="#381E1E"
                android:text="@string/unit" />
            <android.support.v7.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/ic_settings_ethernet_black_24dp"
                />
            <Spinner
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:id="@+id/Sp_product_unit"
                android:layout_height="match_parent">
            </Spinner>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/d_60_70_90"
            android:layout_marginBottom="@dimen/d_1_2_4"
            android:layout_marginTop="@dimen/d_1_2_4"
            android:background="@color/wallet_bright_foreground_holo_dark"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:textSize="@dimen/s_18_20_24"
                android:layout_weight="1"
                android:padding="@dimen/d_8_10_12"
                android:textColor="#381E1E"
                android:text="@string/notes"
                />
            <android.support.v7.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/ic_settings_ethernet_black_24dp"
                />
            <Spinner
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:id="@+id/Sp_product_Note"
                android:layout_height="match_parent">
            </Spinner>
        </LinearLayout>

    </LinearLayout>
</ScrollView>
</LinearLayout>