<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:layout_margin="@dimen/d_8_10_12"
    android:background="#A9A7B8EB"
    tools:context=".login.MainActivity">
<LinearLayout
    android:layout_width="match_parent"
    android:id="@+id/linear"
    android:layout_alignBottom="@id/Scan"
    android:layout_height="match_parent"
    android:layout_marginBottom="@dimen/d_60_80_90_120d"
    android:orientation="vertical"
    >
    <android.support.v7.widget.CardView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="@dimen/d_140_160_200"
        android:layout_margin="@dimen/s_18_20_24"
        android:background="#52F0E5E5"
        app:cardCornerRadius="20dp"
        app:cardElevation="@dimen/d_2_3_4"
        app:cardPreventCornerOverlap="true">
        <ImageButton

            android:id="@+id/Ib_price"
            android:layout_width = "@dimen/d_33_43_53"
            android:layout_height="@dimen/d_33_43_53"
            android:layout_margin="@dimen/d_8_10_12"
            android:visibility="gone"
            android:background="@drawable/edit"
            />

        <TextView
            android:id="@+id/price"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text=""
            android:textColor="#CA6767"
            android:textSize="@dimen/s_35_40_50" />
    </android.support.v7.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="0"
            android:layout_margin="@dimen/d_2_3_4"
            android:text="@string/product_name"
            android:textSize="@dimen/s_25_30_45" />
        <LinearLayout
            android:layout_width="1dp"
            android:background="@color/colorPrimary"
            android:layout_height="match_parent"/>

    <TextView
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_weight="1"
        android:textSize="@dimen/s_25_30_45" />
        <ImageButton
            android:id="@+id/Ib_name"
            android:visibility="gone"
            android:layout_width = "@dimen/d_33_43_53"
            android:layout_height="@dimen/d_33_43_53"
            android:layout_margin="@dimen/d_2_3_4"
            android:background="@drawable/edit"
            />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_margin="@dimen/d_20_25_35"
        android:background="@color/colorPrimaryDark"
        android:layout_height="@dimen/d_2_3_4"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="0"
            android:text="@string/unit"
            android:layout_margin="@dimen/d_2_3_4"
            android:textSize="@dimen/s_25_30_45" />
        <LinearLayout
            android:layout_width="1dp"
            android:background="@color/colorPrimary"
            android:layout_height="match_parent"/>
    <TextView
        android:id="@+id/unit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:padding="@dimen/d_2_3_4"
        android:textSize="@dimen/s_20_25_35" />
    <ImageButton
        android:id="@+id/Ib_unit"
        android:layout_width = "@dimen/d_33_43_53"
        android:visibility="gone"
        android:layout_height="@dimen/d_33_43_53"
        android:layout_margin="@dimen/d_2_3_4"
        android:background="@drawable/edit"
        />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_margin="@dimen/d_20_25_35"
        android:background="@color/colorPrimaryDark"
        android:layout_height="@dimen/d_2_3_4"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="0"
            android:text="@string/notes"
            android:layout_margin="@dimen/d_2_3_4"
            android:textSize="@dimen/s_25_30_45" />
        <LinearLayout
            android:layout_width="1dp"
            android:background="@color/colorPrimary"
            android:layout_height="match_parent"/>
    <TextView
        android:id="@+id/note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:layout_weight="1"
        android:padding="@dimen/d_2_3_4"
        android:gravity="center"
        android:textSize="@dimen/s_20_25_35" />
    <ImageButton
        android:id="@+id/Ib_note"
        android:visibility="gone"
        android:layout_width = "@dimen/d_33_43_53"
        android:layout_height="@dimen/d_33_43_53"
        android:layout_margin="@dimen/d_2_3_4"
        android:background="@drawable/edit"
        />
    </LinearLayout>
</LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="@dimen/d_90_100_120"
        android:src="@drawable/ic_action_add" />

    <ru.katso.livebutton.LiveButton xmlns:livebutton="http://schemas.android.com/apk/res-auto"
        android:id="@+id/Scan"
        android:layout_width="match_parent"
        android:layout_height="@dimen/d_60_80_90_120d"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/d_8_10_12"
        android:gravity="center"
        android:text="@string/scanning"
        android:textColor="#ffffff"
        android:textSize="@dimen/s_30_35_45"
        android:textStyle="bold"
        livebutton:backgroundColor="#F57F76"
        livebutton:corners="8dp"
        livebutton:layout_constraintBottom_toBottomOf="parent"
        livebutton:layout_constraintEnd_toEndOf="parent"
        livebutton:layout_constraintHorizontal_bias="0.501"
        livebutton:layout_constraintStart_toStartOf="parent"
        livebutton:layout_constraintTop_toTopOf="parent"
        livebutton:layout_constraintVertical_bias="0.245"
        livebutton:normalHeight="6dp"
        livebutton:pressedHeight="2dp"
        livebutton:shadowColor="#b16262" />
</RelativeLayout>